# swmv

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: swmv.yml
src/: args.rs  main.rs  transcode.rs  watcher.rs
static/: index.html  index.js  style.css
