[package]
name = "swmv"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
directories = "3.0.1"
anyhow = "1.0.32"
walkdir = "2.3.1"
regex = "1.3.9"
serde_json = "1.0.57"
serde = { version = "1.0.114", features = ["derive"] }
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
log = "0.4.11"
once_cell = "1.4.0"
actix-files = "0.2.2"
actix-cors = "0.2.0"
